# playit

./: CHANGELOG.md  Cargo.toml  README.md  install.sh  massif.out.1104
src/: cache.rs  log.rs  main.rs  mpv.rs  notification.rs  playlist.rs  utils.rs  youtube.rs
