[package]
name = "playit"
version = "0.1.0"
description = "A mpv-based audio runner with features like playlist and more."
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
dirs = "6.0.0"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
