[package]
name = "playit"
version = "1.1.0"
description = "A mpv-based audio runner with features like playlist and more."
authors = ["Kadircy"]
categories = ["command-line-utilities"]
edition = "2021"
exclude = ["/assets/"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/kadircy/playit"
repository = "https://github.com/kadircy/playit"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
dirs = "6.0.0"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

# use LTO for smaller binaries (that take longer to build)
[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = 'abort'
